[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/GameComplete.gd" type="Script" id=1]
[ext_resource path="res://UI/ReturnToMainMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Resume.tscn" type="PackedScene" id=4]
[ext_resource path="res://shaders/white.png" type="Texture" id=5]
[ext_resource path="res://shaders/blur.shader" type="Shader" id=6]

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 6 )
shader_param/amount = 2.0

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/Montserrat-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 0.211765 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 0.211765 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 0.211765 )
font_data = SubResource( 3 )

[node name="GameComplete" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameComplete" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="GameComplete"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.239216 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Blur" type="TextureRect" parent="GameComplete"]
material = SubResource( 6 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="GameCompleteContainer" type="VBoxContainer" parent="GameComplete"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameCompleteTitle" type="Label" parent="GameComplete/GameCompleteContainer"]
margin_top = 155.0
margin_right = 1280.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 2 )
text = "Maze Complete"
align = 1

[node name="Gap" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 197.0
margin_right = 1280.0
margin_bottom = 221.0
rect_min_size = Vector2( 24, 24 )
color = Color( 1, 1, 1, 0 )

[node name="ElapsedTime" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 225.0
margin_right = 1280.0
margin_bottom = 253.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0, 0, 0, 0 )

[node name="Elapsed" type="Label" parent="GameComplete/GameCompleteContainer/ElapsedTime"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Elapsed: "
align = 2
valign = 2

[node name="Time" type="Label" parent="GameComplete/GameCompleteContainer/ElapsedTime"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_right = 514.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "0.00233"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap2" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 257.0
margin_right = 1280.0
margin_bottom = 281.0
rect_min_size = Vector2( 24, 24 )
color = Color( 1, 1, 1, 0 )

[node name="TotalBoxes" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 285.0
margin_right = 1280.0
margin_bottom = 313.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0, 0, 0, 0 )

[node name="Label" type="Label" parent="GameComplete/GameCompleteContainer/TotalBoxes"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Boxes Gathered: "
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="GameComplete/GameCompleteContainer/TotalBoxes"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_right = 514.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="White" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 317.0
margin_right = 1280.0
margin_bottom = 345.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0, 0, 0, 0 )

[node name="Label" type="Label" parent="GameComplete/GameCompleteContainer/White"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "White: "
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="GameComplete/GameCompleteContainer/White"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_right = 514.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 2

[node name="Red" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 349.0
margin_right = 1280.0
margin_bottom = 377.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0, 0, 0, 0 )

[node name="Label" type="Label" parent="GameComplete/GameCompleteContainer/Red"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Red: "
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="GameComplete/GameCompleteContainer/Red"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_right = 514.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Purple" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 381.0
margin_right = 1280.0
margin_bottom = 409.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0, 0, 0, 0 )

[node name="Label" type="Label" parent="GameComplete/GameCompleteContainer/Purple"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Purple: "
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="GameComplete/GameCompleteContainer/Purple"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_right = 514.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gold" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 413.0
margin_right = 1280.0
margin_bottom = 441.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0, 0, 0, 0 )

[node name="Label" type="Label" parent="GameComplete/GameCompleteContainer/Gold"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Gold: "
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Total" type="Label" parent="GameComplete/GameCompleteContainer/Gold"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_right = 514.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap3" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 445.0
margin_right = 1280.0
margin_bottom = 469.0
rect_min_size = Vector2( 24, 24 )
color = Color( 1, 1, 1, 0 )

[node name="Score" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 473.0
margin_right = 1280.0
margin_bottom = 501.0
rect_min_size = Vector2( 0, 28 )
color = Color( 0, 0, 0, 0 )

[node name="Score" type="Label" parent="GameComplete/GameCompleteContainer/Score"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Bonus Score: "
align = 2
valign = 2

[node name="Total" type="Label" parent="GameComplete/GameCompleteContainer/Score"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2.0
margin_right = 514.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "0"
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gap4" type="ColorRect" parent="GameComplete/GameCompleteContainer"]
margin_top = 505.0
margin_right = 1280.0
margin_bottom = 529.0
rect_min_size = Vector2( 24, 24 )
color = Color( 1, 1, 1, 0 )

[node name="MenuButtons" type="HBoxContainer" parent="GameComplete/GameCompleteContainer"]
margin_top = 533.0
margin_right = 1280.0
margin_bottom = 565.0
alignment = 1

[node name="ReturnToMainMenu" parent="GameComplete/GameCompleteContainer/MenuButtons" instance=ExtResource( 2 )]
margin_left = 252.0
margin_top = 0.0
margin_right = 508.0
margin_bottom = 32.0

[node name="Exit" parent="GameComplete/GameCompleteContainer/MenuButtons" instance=ExtResource( 3 )]
margin_left = 512.0
margin_top = 0.0
margin_right = 768.0
margin_bottom = 32.0

[node name="Resume" parent="GameComplete/GameCompleteContainer/MenuButtons" instance=ExtResource( 4 )]
margin_left = 772.0
margin_top = 0.0
margin_right = 1028.0
margin_bottom = 32.0
